[package]
name = "migration"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.6"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
