[package]
name = "tvl"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "tvl"
path = "src/lib.rs"
[[bin]]
name = "tvl"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
log4rs = "1.0"
tokio = { version = "1.42.0", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
ic-agent = "0.37.1"
candid = "0.10.10"
ic-cdk = "0.14"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
icrc-ledger-types = "0.1.6"
reqwest = "0.12.9"

